--- a/appspec.yml
+++ b/appspec.yml
@@ -1,7 +1,7 @@
 version: 0.0
 os: linux
 files:
-  - source: /index.html
+  - source: /index.html /AboutUs.html /ContactUs.html
     destination: /usr/share/nginx/html/
 hooks:
   BeforeInstall:
